--- a/templates/index.html
+++ b/templates/index.html
@@ -5,23 +5,138 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Costa Rica Weather</title>
+  <title>Mission to Mars</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <body>
   <div class="container-fluid">
     <div class="jumbotron text-center">
-      <h1>Visit the...</h1>
-      <p>Beach. Rainforest. Volcano. Tree House. Sloths.</p>
-      <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Get Data!</a></p>
+      <h1>Mission to Mars</h1>
+      <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
     </div>
-    <img src="{{ vacation.sloth_img }}" alt="Sloth">
-    <h2>The typical weather in Costa Rica is:</h2>
-    <h3>Max Temp: {{ vacation.max_temp }}</h3>
-    <h3>Min Temp: {{ vacation.min_temp }}</h3>
+
+    <h2>Latest Mars News</h2>
+      <h2>{{ mars.mars_title }}</h2>
+      <p>{{ mars.mars_text }}</p>
+
+     
+    <!-- Second row with hemisphers -->
+    <div class="container">
+          </div>
+          <div class="row">
+              <div class="col-md-8">
+                  <h2>Featured Image</h2>
+                  <img src="{{ mars.feature_img }}"  style="width:75%">
+                </div>
+              <div class="col-md-4">
+                  <h3>Mars Data</h3>
+                    <div class="table-responsive-md">
+                      <table border="1" class="dataframe">
+                        <thead>
+                          <tr style="text-align: right;">
+                            <th>Mars</th>
+                            <th>Description</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            
+                            <td>Equatorial Diameter:</td>
+                            <td>6,792 km</td>
+                          </tr>
+                          <tr>
+                            
+                            <td>Polar Diameter:</td>
+                            <td>6,752 km</td>
+                          </tr>
+                          <tr>
+                            
+                            <td>Mass:</td>
+                            <td>6.39 × 10^23 kg (0.11 Earths)</td>
+                          </tr>
+                          <tr>
+                            
+                            <td>Moons:</td>
+                            <td>2 (Phobos &amp; Deimos)</td>
+                          </tr>
+                          <tr>
+                            
+                            <td>Orbit Distance:</td>
+                            <td>227,943,824 km (1.38 AU)</td>
+                          </tr>
+                          <tr>
+                            
+                            <td>Orbit Period:</td>
+                            <td>687 days (1.9 years)</td>
+                          </tr>
+                          <tr>
+                            
+                            <td>Surface Temperature:</td>
+                            <td>-87 to -5 °C</td>
+                          </tr>
+                          <tr>
+                            
+                            <td>First Record:</td>
+                            <td>2nd millennium BC</td>
+                          </tr>
+                          <tr>
+                            
+                            <td>Recorded By:</td>
+                            <td>Egyptian astronomers</td>
+                          </tr>
+                        </tbody>
+                      </table>
+         
+                    </div> 
+            
+          </div>
+          
+
+ 
+          <div class="row">
+            <div class="col-md-12 "> 
+                 
+              <h1> Mars Hemisphere </h1>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="caption">{{ mars.hemi_imgs[0].title }}</div>
+                  <img src="{{ mars.hemi_imgs[0].image_url }}"  style="width:75%">
+                  </div>
+                <div class="col-md-6">
+                  <div class="caption">{{ mars.hemi_imgs[1].title }}</div>
+                  <img src="{{ mars.hemi_imgs[1].image_url }}"  style="width:75%">
+                  </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="caption">{{ mars.hemi_imgs[2].title }}</div>
+                  <img src="{{ mars.hemi_imgs[2].image_url }}"  style="width:75%">
+                  </div>
+                <div class="col-md-6">                  
+                  <div class="caption">{{ mars.hemi_imgs[3].title }}</div>
+                  <img src="{{ mars.hemi_imgs[3].image_url }}"  style="width:75%">
+                  </div>
+                </div>
+              </div>
+              </div>
+             
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   </div>
+
+      
+    
+  </div>
+  </div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+
+
 </body>
 
 </html>
